changepassword and update user details completed
