# routers/user.js
@@ -3,9 +3,15 @@ const router = express.Router();
 const {verifyUser} = require('../middlewares/userVerify');
 
 const { 
-   getuser
+   getuser,
+   changePassword,
+   updateUser
 } = require('../controllers/user');
 
 router.get('/userinfo', verifyUser, getuser);
+
+router.post('/changepassword', verifyUser, changePassword);
+
+router.post('/updateUser', verifyUser, updateUser);
 
 module.exports = router
